5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1664_1394.log
== TEST (2019-04-16 10:04:29) 
-- CODE:
q = float(input("quantidade de horas: "))

if q<=20:
	print(50*q)
	
else:
	print((q-20)*70)
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:06:35) 
-- CODE:
q = float(input("quantidade de horas: "))

if q<=20:
	print(round(50*q, 2)
	
else:
	print(round((q-20)*70+q*20, 2))
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:06:44) 
-- CODE:
q = float(input("quantidade de horas: "))

if q<=20:
	print(round(50*q, 2)
	
else:
	print(round((q-20)*70+ q *20, 2))
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:06:53) 
-- CODE:
q = float(input("quantidade de horas: "))

if q<=20:
	print(round(50*q, 2))
	
else:
	print(round((q-20)*70+ q *20, 2))
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:07:16) 
-- CODE:
q = float(input("quantidade de horas: "))

if q<=20:
	print(round(50*q, 2))
	
else:
	print(round((q-20)*70 + (q *20), 2))
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:07:30) 
-- CODE:
q = float(input("quantidade de horas: "))

if q<=20:
	print(round(50*q, 2))
	
else:
	print(round((q-20)*70 + (q *50), 2))
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:10:03) 
-- CODE:
q = float(input("quantidade de horas: "))

if q<=20:
	print(round(50*q, 2))
	
else:
	print(round((q-20)*70+(q*50), 2))
-- EXECUTION TIME:
0.188512
-- TEST CASE 1:
---- input:
15
---- correct output:
750.0
---- user output:
750.0
-- TEST CASE 2:
---- input:
45
---- correct output:
2750.0
---- user output:
4000.0
-- TEST CASE 3:
---- input:
48
---- correct output:
2960
---- user output:
4360.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:10:14) 
-- CODE:
q = float(input("quantidade de horas: "))

if q<=20:
	print(round(50*q, 2))
	
else:
	print(round((
-- ERROR:
File "XXXX", line 8
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:10:22) 
-- CODE:
q = float(input("quantidade de horas: "))

if q<=20:
	print(round(50*q, 2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:10:30) 
-- CODE:
q = float(input("quantidade de horas: "))

if q<=20:
	print(round(50*q, 2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:12:05) 
-- CODE:
q = float(input("quantidade de horas: "))

if q<=20:
	print(round(50*q, 2))
	
else:
	print(round((50*q)+((q-20)*70)
-- ERROR:
File "XXXX", line 8
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:12:21) 
-- CODE:
q = float(input("quantidade de horas: "))

if q<=20:
	print(round(50*q, 2))
	
else:
	print(round((50*q)+((q-20)*70))
-- ERROR:
File "XXXX", line 8
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:12:38) 
-- CODE:
q = float(input("quantidade de horas: "))

if q<=20:
	print(round(50*q, 2))
	
else:
	print(round((50*q)+((q-20)*70), 2)
-- ERROR:
File "XXXX", line 8
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:12:59) 
-- CODE:
q = float(input("quantidade de horas: "))

if q<=20:
	print(round(50*q, 2))
	
else:
	print(round((50*q)+((q-20)*70, 2))
-- ERROR:
File "XXXX", line 8
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:13:54) 
-- CODE:
q = float(input("quantidade de horas: "))

if q<=20:
	print(round(50*q, 2))
	
else:
	print(round((50*q)+((q-20)*70), 2))
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:14:19) 
-- CODE:
q = float(input("quantidade de horas: "))

if q<=20:
	print(round(50*q, 2))
	
else:
	print(round((50*20)+((q-20)*70), 2))
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:14:23) 
-- CODE:
q = float(input("quantidade de horas: "))

if q<=20:
	print(round(50*q, 2))
	
else:
	print(round((50*20)+((q-20)*70), 2))
-- EXECUTION TIME:
0.138306
-- TEST CASE 1:
---- input:
15
---- correct output:
750.0
---- user output:
750.0
-- TEST CASE 2:
---- input:
45
---- correct output:
2750.0
---- user output:
2750.0
-- TEST CASE 3:
---- input:
48
---- correct output:
2960
---- user output:
2960.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
